--- a/views/detalleMenu.ejs
+++ b/views/detalleMenu.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Pimienta & sal</title>
-    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
@@ -23,7 +23,7 @@
     <header class="ps-display-container ps-content ps-wide" id="home">
       <img
         class="ps-image"
-        src="/images/header.jpg"
+        src="/img/header.jpg"
         alt="Pimienta & Sal"
         width="1600"
         height="800"
@@ -61,7 +61,7 @@
 
         <div class="ps-col l6 ps-padding-large ps-img-menu">
           <img
-            src="/images/menu.jpg"
+            src="/img/menu.jpg"
             class="ps-round ps-image ps-opacity-min"
             alt="Menu"
           />
