--- a/views/detalleMenu.ejs
+++ b/views/detalleMenu.ejs
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Pimienta & sal</title>
-    <link rel="stylesheet" href="/css/style.css" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-  </head>
+  <%- include("./partials/head.ejs") %>
   <body>
     <!-- Navbar (sit on top) -->
     <nav class="ps-top">
