--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,18 +7,8 @@
     <!--Navbar-->
 
     <!-- Header -->
-    <header class="ps-display-container ps-content ps-wide" id="home">
-      <img
-        class="ps-image"
-        src="/img/header.jpg"
-        alt="Pimienta & Sal"
-        width="1600"
-        height="800"
-      />
-      <div class="ps-display-bottomleft ps-padding-large ps-opacity">
-        <h1 class="ps-xxlarge">Sabores que enamoran</h1>
-      </div>
-    </header>
+    <%- include("./partials/header.ejs") %>
+    <!-- Header -->
 
     <!-- Page content -->
     <div class="ps-content">
