--- a/views/index.ejs
+++ b/views/index.ejs
@@ -87,9 +87,8 @@
       </div>
 
       <!-- Footer -->
-      <footer class="ps-center ps-light-grey ps-padding-32">
-        <p>Powered by Pimienta & Sal</p>
-      </footer>
+      <%- include("./partials/footer.ejs") %>
+      <!-- Footer -->
     </div>
   </body>
 </html>
