--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,29 +52,16 @@
         <div class="ps-col l6 ps-padding-large">
           <h1 class="ps-center">Nuentro Menu</h1>
           <br />
-          <h4>Carpaccio fresco</h4>
+          <% for(let producto of productos){ %>
+          <h4>
+            <a href="/detalle/<%= producto.id %> "> <%= producto.nombre %> </a>
+          </h4>
           <p class="ps-text-grey">
-            Entrada Carpaccio de salmón con cítricos U$S 65.50
+            <%=(producto.descripcion=="")?"Plato típico":producto.descripcion%>
+            U$S <%= producto.precio %>
           </p>
           <br />
-
-          <h4>Risotto de berenjena</h4>
-          <p class="ps-text-grey">
-            Risotto de berenjena y queso de cabra U$S 47.00
-          </p>
-          <br />
-
-          <h4>Mousse de arroz</h4>
-          <p class="ps-text-grey">
-            Mousse de arroz con leche y aroma de azahar U$S 27.50
-          </p>
-          <br />
-
-          <h4>Espárragos blancos</h4>
-          <p class="ps-text-grey">
-            Espárragos blancos con vinagreta de verduras y jamón ibérico U$S
-            37.50
-          </p>
+          <% } %>
         </div>
 
         <div class="ps-col l6 ps-padding-large ps-img-menu">
